modified:   06. Loops/Loops.ipynb

--- a/06. Loops/Loops.ipynb
+++ b/06. Loops/Loops.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "# 6. Loops"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "##### Programming often requires repeated execution of a sequence of operations.<br><br>A **loop** is a basic programming construct that allows **repeated execution of a fragment of source code.**   \n",
     "##### Depending on the type of the loop, the code in it is repeated a fixed number of times or repeats until a given *condition* is `true` (exists).  \n",
@@ -40,7 +54,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "while (condition) \n",
@@ -54,7 +75,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "<center>\n",
     "\n",
@@ -65,7 +93,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Above, **condition** is any expression that returns a **Boolean** result – `true` or `false`.   \n",
     "    \n",
@@ -82,7 +117,7 @@
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
@@ -90,16 +125,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number: 0\r\n",
-      "Number: 1\r\n",
-      "Number: 2\r\n",
-      "Number: 3\r\n",
-      "Number: 4\r\n",
-      "Number: 5\r\n",
-      "Number: 6\r\n",
-      "Number: 7\r\n",
-      "Number: 8\r\n",
-      "Number: 9\r\n"
+      "Number: 0\n",
+      "Number: 1\n",
+      "Number: 2\n",
+      "Number: 3\n",
+      "Number: 4\n",
+      "Number: 5\n",
+      "Number: 6\n",
+      "Number: 7\n",
+      "Number: 8\n",
+      "Number: 9\n"
      ]
     }
    ],
@@ -121,28 +156,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "#### `do-while` **Loops**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "The `do-while` loop is similar to the `while` loop, but it checks the condition *after* each execution of its loop body."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "do\n",
@@ -156,7 +219,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "<center>\n",
     "\n",
@@ -167,7 +237,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Initially the **loop body** is executed. *Then* its condition is checked. If it is `true`, the loop’s body is repeated, otherwise the loop ends.   \n",
     "    \n",
@@ -184,7 +261,7 @@
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
@@ -192,12 +269,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\r\n",
-      "0\r\n",
-      "1\r\n",
-      "2\r\n",
-      "3\r\n",
-      "4\r\n"
+      "-1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
      ]
     }
    ],
@@ -223,28 +300,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "#### `for` **Loops**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "`for` loops are a slightly more complicated than `while` and `do-while` loops, but on the other hand they can solve more complicated tasks with less code."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "for (initialization; condition; update)\n",
@@ -256,7 +361,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "<center>\n",
     "\n",
@@ -267,7 +379,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Since none of the *parameters* of `for` loops are mandatory, we can skip them all and we will get an **infinite loop**:"
    ]
@@ -290,7 +409,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "However, observe that the `for` loop typically contains the following **parameters**: \n",
     "- an **Initialization Block** (**A**)\n",
@@ -301,21 +427,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "##### Initialization Block"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "It is executed only once, just *before* entering the loop. Usually the *initialization block* is used to declare the *counter-variable* (also called a *loop variable*) and to set its *initial value*."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "for( int counter = 0; ; )\n",
@@ -328,21 +475,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "##### Condition"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "The condition (loop condition) is evaluated once *before* each iteration of the loop, just like in the `while` loops. If the result is `true`, the loop’s body is executed. If `false` it is skipped and the loop ends (the program continues immediately after the last line of the loop’s body)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "for( ; counter < 10; )\n",
@@ -354,21 +522,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "##### Updating Commands"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "This code is executed at each iteration, *after* the loop’s body has been executed. It is most commonly used to *update the value* of the counter variable."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "for( ; ; counter++ )\n",
@@ -381,14 +570,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "##### Body"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "The body of the loop contains a block with source code.     \n",
     "The loop variables, declared in the initialization block of the loop are available in it."
@@ -396,7 +599,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "for( int counter = 0; counter < 10; counter++ )\n",
@@ -408,28 +618,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "#### `foreach` **Loops**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "This programming construct serves to iterate over *all elements* of an `Array`, `List` or other collection of elements (`IEnumerable`). It *passes through all the elements* of the specified *collection* even if the collection is not indexed."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "```c#\n",
     "foreach ( type variable in collection ) \n",
@@ -442,7 +680,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Compared to a `for` loop, a `foreach` loop has a tendency to be more readable.    \n",
     "   \n",
@@ -451,13 +696,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
@@ -465,9 +710,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "January\r\n",
-      "February\r\n",
-      "March\r\n"
+      "January\n",
+      "February\n",
+      "March\n"
      ]
     }
    ],
@@ -488,7 +733,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Note that `foreach` loops are somewhat *slower*, simply as a result of their internal mechanics. If you’re discovering that a particular `foreach` loop is taking way more time than you’d like, converting it to a `for` loop is an easy way to get a little extra speed out of it."
    ]
@@ -500,14 +752,17 @@
    "language": "C#",
    "name": ".net-csharp"
   },
-  "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
-  },
-  "orig_nbformat": 4
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
