--- a/12. Exception Handling/Exceptions Heirarchy and Advanced Handling.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy and Advanced Handling.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## Exceptions Hierarchy\n",
+    "## Exceptions Hierarchy and Advanced Handling\n",
     "---"
    ]
   },
@@ -1188,7 +1188,6 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
