modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -194,7 +194,7 @@
     }
    },
    "source": [
-    "<table style=\"margin: auto\">\n",
+    "<table style=\"margin: auto; border: 1px solid;\">\n",
     "    <thead>\n",
     "    <th>H</th>\n",
     "    <th>E</th>\n",
