modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -194,7 +194,12 @@
     }
    },
    "source": [
-    "<table style=\"margin: auto; border: 1px solid;\">\n",
+    "<style>\n",
+    "    th{\n",
+    "        border: 1px solid black;\n",
+    "    }\n",
+    "</style>\n",
+    "<table style=\"margin: auto;\">\n",
     "    <thead>\n",
     "    <th>H</th>\n",
     "    <th>E</th>\n",
