modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -194,21 +194,16 @@
     }
    },
    "source": [
-    "<style>\n",
-    "    th{\n",
-    "        border: 1px solid black;\n",
-    "    }\n",
-    "</style>\n",
     "<table style=\"margin: auto;\">\n",
     "    <thead>\n",
-    "    <th>H</th>\n",
-    "    <th>E</th>\n",
-    "    <th>L</th>\n",
-    "    <th>L</th>\n",
-    "    <th>O</th>\n",
-    "    <th> </th>\n",
-    "    <th>C</th>\n",
-    "    <th>#</th>\n",
+    "        <th style=\"border: 1px solid black;\">H</th>\n",
+    "        <th style=\"border: 1px solid black;\">E</th>\n",
+    "        <th style=\"border: 1px solid black;\">L</th>\n",
+    "        <th style=\"border: 1px solid black;\">L</th>\n",
+    "        <th style=\"border: 1px solid black;\">O</th>\n",
+    "        <th style=\"border: 1px solid black;\"> </th>\n",
+    "        <th style=\"border: 1px solid black;\">C</th>\n",
+    "        <th style=\"border: 1px solid black;\">#</th>\n",
     "    </thead>\n",
     "</table>"
    ]
