modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -194,7 +194,7 @@
     }
    },
    "source": [
-    "<table style=\"margin: auto;\">\n",
+    "<table style=\"margin: auto; background: white; color: black;\">\n",
     "    <thead>\n",
     "        <th style=\"border: 1px solid black;\">H</th>\n",
     "        <th style=\"border: 1px solid black;\">E</th>\n",
